--- a/API/Elasticsearch.WEB/Views/Shared/_Layout.cshtml
+++ b/API/Elasticsearch.WEB/Views/Shared/_Layout.cshtml
@@ -32,6 +32,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Blog"
                                 asp-action="Save">Blog Save</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Blog"
+                                asp-action="Search">Blog Serach</a>
+                        </li>
                     </ul>
                 </div>
             </div>
