--- a/API/Elasticsearch.WEB/Views/Shared/_Layout.cshtml
+++ b/API/Elasticsearch.WEB/Views/Shared/_Layout.cshtml
@@ -29,12 +29,16 @@
                                 asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Blog"
-                                asp-action="Save">Blog Save</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="Save">Blog
+                                Save</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Blog"
-                                asp-action="Search">Blog Serach</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="Search">Blog
+                                Serach</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ECommerce"
+                                asp-action="Search">ECommerce Search</a>
                         </li>
                     </ul>
                 </div>
