--- a/API/Elasticsearch.WEB/Views/ECommerce/Search.cshtml
+++ b/API/Elasticsearch.WEB/Views/ECommerce/Search.cshtml
@@ -4,7 +4,7 @@
 @model SearchPageViewModel
 <div class="container">
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-3">
             <form asp-action="Search" method="get">
 
                 <div class="mb-3">
@@ -36,7 +36,7 @@
                 </div>
             </form>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-9">
 
             <div class="alert alert-success">
                 <span> Toplam @Model.TotalCount kayıt bulunmuştur</span>
@@ -70,7 +70,31 @@
 
                 </tbody>
             </table>
+            <nav>
+                <ul class="pagination">
+
+                    <li class="page-item">
+                        <a class="page-link" href="@Model.CreatePageUrl(Context.Request,1,Model.PageSize)">First</a>
+                    </li>
+
+
+                    @for (int i = Model.StartPage(); i <= @Model.EndPage(); i++)
+                    {
+                        <li class="page-item @(Model.Page==i ?"active" :"")">
+                            <a class="page-link" href="@Model.CreatePageUrl(Context.Request,i,Model.PageSize)">@i</a>
+                        </li>
+                    }
+
+                    <li class="page-item">
+                        <a class="page-link"
+                            href="@Model.CreatePageUrl(Context.Request,Model.PageLinkCount,Model.PageSize)">Last</a>
+                    </li>
+
+                </ul>
+
+            </nav>
         </div>
+
     </div>
 
 </div>
